--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,9 @@ platforms/
 plugins/
 plugins/android.json
 plugins/ios.json
+v2/www/build/
 www/
-www/build
+www/build/
 $RECYCLE.BIN/
 
 .DS_Store
