--- a/.gitignore
+++ b/.gitignore
@@ -24,13 +24,14 @@ node_modules/
 tmp/
 temp/
 platforms/
+platforms/android/
 plugins/
 plugins/android.json
 plugins/ios.json
 v2/www/build/
+www/build/
 /www/
 www/
-www/build/
 $RECYCLE.BIN/
 
 .DS_Store
