--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ platforms/android/
 plugins/
 plugins/android.json
 plugins/ios.json
-v2/www/build/
+/Users/fahri/RoutePlanner--v2/www/build/
 www/build/
 /www/
 www/
