--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/google-maps": "^3.2.0",
     "angularfire2": "^5.0.0-rc.11",
     "cordova-android": "^7.1.4",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
@@ -65,7 +66,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
